--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -107,7 +107,7 @@ ion-icon {
 ion-icon[name='document'] {
   width: 2rem;
   height: 2rem;
-  color: var(--ion-color-tertiary-tint);
+  color: var(--ion-color-tertiary);
 }
 ion-icon[name='logo-html5'] {
   width: 20px;
