--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -49,7 +49,7 @@
           [color]="router.url === '/clipboard/images' ? 'primary' : 'tertiary'"
           (click)="navigateForward('clipboard/images')"
         >
-          <ion-icon slot="icon-only" name="document"></ion-icon>
+          <ion-icon slot="icon-only" name="browsers"></ion-icon>
         </ion-button>
         <div class="divider"></div>
         <ion-button
