add quill editor

--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -44,14 +44,14 @@
         >
           <ion-icon slot="icon-only" name="laptop"></ion-icon>
         </ion-button>
+        <div class="divider"></div>
         <ion-button
           fill="clear"
-          [color]="router.url === '/clipboard/images' ? 'primary' : 'tertiary'"
-          (click)="navigateForward('clipboard/images')"
+          [color]="router.url === '/clipboard/editor' ? 'primary' : 'tertiary'"
+          (click)="navigateForward('clipboard/editor')"
         >
           <ion-icon slot="icon-only" name="browsers"></ion-icon>
         </ion-button>
-        <div class="divider"></div>
         <ion-button
           fill="clear"
           [color]="router.url === '/clipboard/images' ? 'primary' : 'tertiary'"
