--- a/src/app/pages/clipboard/clipboard.page.scss
+++ b/src/app/pages/clipboard/clipboard.page.scss
@@ -63,6 +63,17 @@
   }
 
   .divider {
-    border-bottom: 1px solid var(--ion-color-light-extra-blue);
+    // border-bottom: 1px solid var(--ion-toolbar-border-color);
+    height: 5px;
+    overflow: hidden;
+    &:after {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 25px;
+      margin: -25px auto 0;
+      border-radius: 150px / 125px;
+      box-shadow: 0 0 5px var(--ion-color-medium);
+    }
   }
 }
