--- a/src/app/pages/editor/editor.page.html
+++ b/src/app/pages/editor/editor.page.html
@@ -19,6 +19,9 @@
       <ion-button shape="round" color="medium" (click)="addQuillCard()">
         <ion-icon slot="icon-only" name="add"></ion-icon>
       </ion-button>
+      <ion-button shape="round" color="medium" (click)="addQuillCard()">
+        <ion-icon slot="icon-only" name="more"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-footer>
