add quillcard service

--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -52,6 +52,14 @@
           <ion-button
             fill="clear"
             shape="round"
+            color="medium"
+            (click)="onEdit($event)"
+          >
+            <ion-icon name="create"></ion-icon>
+          </ion-button>
+          <ion-button
+            fill="clear"
+            shape="round"
             [color]="view === 'htmlView' ? 'primary' : 'medium'"
             [disabled]="clip.type === 'image' || !hasHtmlView"
             (click)="
