--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -9,7 +9,7 @@ ion-label {
 }
 
 ion-item:hover {
-  --ion-background-color: rgba(248, 248, 252, 0.9);
+  --ion-background-color: rgba(246, 248, 252, 0.9);
 }
 
 .container {
@@ -109,7 +109,7 @@ ion-icon[name='document'] {
   height: 2rem;
   color: var(--ion-color-tertiary);
 }
-ion-icon[name='logo-html5'] {
+ion-icon[name='create'] {
   width: 20px;
   height: 20px;
 }
