--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -3,7 +3,7 @@
   <div class="container justify-content align-items center header">
     <div class="container column justify-content align-items center">
       <h1>A seamless clipboard</h1>
-      <h2>Available soon</h2>
+      <h2>Available soon (macOS)</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
@@ -26,7 +26,7 @@
         </button>
         <button mat-raised-button disabled>Download for Mac</button>
       </div>
-      <p>Version 0.0.1β</p>
+      <p>Version 0.0.2</p>
     </div>
   </div>
 
