modify copy behavior

--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -53,6 +53,7 @@
             fill="clear"
             shape="round"
             color="medium"
+            [disabled]="clip.type === 'image'"
             (click)="onEdit($event)"
           >
             <ion-icon name="create"></ion-icon>
