add download function to image viewer

--- a/src/app/components/clipboard-image-item/clipboard-image-item.component.html
+++ b/src/app/components/clipboard-image-item/clipboard-image-item.component.html
@@ -11,6 +11,15 @@
         slot="end"
         fill="clear"
         shape="round"
+        [color]="'medium'"
+        (click)="onDownloadClick($event)"
+      >
+        <ion-icon slot="icon-only" name="download"></ion-icon>
+      </ion-button>
+      <ion-button
+        slot="end"
+        fill="clear"
+        shape="round"
         [color]="clip.category === 'starred' ? 'primary' : 'medium'"
         (click)="onAddToBookmarkClick($event)"
       >
