--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -27,7 +27,7 @@ ion-item:hover {
         border-radius: 5px;
       }
       img {
-        object-fit: none;
+        object-fit: cover;
       }
     }
     h3,
