--- a/src/app/pages/clipboard-images/clipboard-images.page.html
+++ b/src/app/pages/clipboard-images/clipboard-images.page.html
@@ -5,6 +5,7 @@
     (modifyClip)="modifyClip($event)"
     (removeClip)="removeClip($event)"
     (translateText)="translateText($event)"
+    (downloadClip)="downloadClip($event)"
     [clip]="clip"
     [index]="i"
   ></app-clipboard-image-item>
