--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -3,7 +3,7 @@
   <div class="container justify-content align-items center header">
     <div class="container column justify-content align-items center">
       <h1>A seamless clipboard</h1>
-      <h2>Available soon (macOS)</h2>
+      <h2>Available for Windows and macOS</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
@@ -24,9 +24,11 @@
         >
           Download for Windows (64Bit)
         </button>
-        <button mat-raised-button disabled>Download for Mac</button>
+        <button mat-raised-button (click)="downloadForMac()">
+          Download for Mac
+        </button>
       </div>
-      <p>Version 0.0.2</p>
+      <p>Version 0.1.0</p>
     </div>
   </div>
 
