--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -2,7 +2,7 @@
   <!-- Dots -->
   <ion-progress-bar *ngIf="loading" type="indeterminate"></ion-progress-bar>
   <app-clipboard-item-component
-    *ngFor="let clip of (clips$ | async); let i = index"
+    *ngFor="let clip of clips$ | async; let i = index"
     (copyToClipboard)="copyToClipboard($event)"
     (editClip)="editClip($event)"
     (modifyClip)="modifyClip($event)"
@@ -10,6 +10,7 @@
     (translateText)="translateText($event)"
     [clip]="clip"
     [index]="i"
+    [focus]="focusIndex === i"
   >
   </app-clipboard-item-component>
   <ion-infinite-scroll threshold="50px" (ionInfinite)="loadMore($event)">
