--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -2,6 +2,7 @@ ion-item {
   --padding-start: 8px;
   --padding-end: 8px;
   --inner-padding-end: 0;
+  --highlight-color-focused: red;
 }
 
 ion-label {
