add focus directive

--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -2,7 +2,7 @@ ion-item {
   --padding-start: 8px;
   --padding-end: 8px;
   --inner-padding-end: 0;
-  --highlight-color-focused: red;
+  // --highlight-color-focused: greee;
 }
 
 ion-label {
