navigation bar style fix

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,46 +1,11 @@
 <ion-content class="light-theme">
-  <!-- Header -->
-  <div class="container justify-content align-items center header">
-    <div class="container column justify-content align-items center">
-      <h1>A seamless clipboard</h1>
-      <h2>Available for Windows and macOS</h2>
-      <h4>
-        Infiniti Clips is a free, open source hybrid clipboard application
-        available for Windows and macOS.
-      </h4>
-      <div class="container">
-        <ion-item lines="none">
-          <ion-icon name="logo-windows"></ion-icon>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-icon name="logo-apple"></ion-icon>
-        </ion-item>
-      </div>
-      <div class="container flex-wrap space-evenly">
-        <button
-          mat-raised-button
-          color="primary"
-          (click)="downloadForWindows()"
-        >
-          Download for Windows (64Bit)
-        </button>
-        <button mat-raised-button (click)="downloadForMac()">
-          Download for Mac
-        </button>
-      </div>
-      <p>Version 0.1.0</p>
-    </div>
-  </div>
-
-  <mat-divider></mat-divider>
-
   <!-- Content -->
   <div class="container content justify-content align-items column center">
     <div class="container item">
       <div><img src="assets/images/app-landscape.png" /></div>
       <div>
         <h2>
-          All you need just in one place
+          Search from your history
         </h2>
         <p>Browse, search, bookmark, and more...</p>
       </div>
