--- a/src/app/site/pages/contact/contact.page.scss
+++ b/src/app/site/pages/contact/contact.page.scss
@@ -1,5 +1,30 @@
+.header {
+  width: 100%;
+  height: 620px;
+  background-image: url('../../../../assets/images/contact.png');
+  background-size: cover; /* <------ */
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  z-index: 10;
+  .contact {
+    padding: 3rem;
+    .title {
+      font-weight: 900;
+      font-size: 1.9rem;
+      text-transform: uppercase;
+      color: var(--text-color--light);
+    }
+    .subt {
+      font-size: 1.3rem;
+      color: var(--ion-color-medium);
+    }
+  }
+}
+
 .wrapper {
   min-height: 725px;
+  background-color: transparent;
   @media only screen and (max-width: 599px) {
     height: calc(100% - 112px);
   }
@@ -12,6 +37,7 @@
   display: flex;
   justify-content: center;
   .card {
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 2rem 1.7rem;
     @media only screen and (max-width: 479px) {
       width: 479px;
@@ -25,15 +51,6 @@
     // and (max-width: 1999px)
     @media only screen and (min-width: 992px) {
       width: 1000px;
-    }
-    .title {
-      font-weight: 900;
-      font-size: 1.3rem;
-      text-transform: uppercase;
-      color: var(--text-color--light);
-    }
-    .subt {
-      font-size: 0.8rem;
     }
     .content {
       padding-top: 2rem;
