--- a/src/app/site/pages/contact/contact.page.html
+++ b/src/app/site/pages/contact/contact.page.html
@@ -1,7 +1,7 @@
 <ion-content class="light-theme">
   <div class="header">
     <div class="contact">
-      <div class="title">Contact us</div>
+      <div class="title">Contact</div>
       <div class="subt">
         For any kind of questions
       </div>
@@ -12,8 +12,10 @@
     <div class="container form">
       <mat-card class="card">
         <form [formGroup]="form" (ngSubmit)="send()">
-          <mat-card-title class="title"> Contact us </mat-card-title>
-          <mat-card-subtitle class="subt">
+          <mat-card-title style="font-weight: 900; color: var(--text-color--light-blue)">
+            CONTACT
+          </mat-card-title>
+          <mat-card-subtitle>
             For any kind of questions
           </mat-card-subtitle>
           <mat-card-content class="content">
