--- a/src/app/site/pages/contact/contact.page.scss
+++ b/src/app/site/pages/contact/contact.page.scss
@@ -10,14 +10,14 @@
   .contact {
     padding: 3rem;
     .title {
-      font-weight: 900;
-      font-size: 1.9rem;
+      font-weight: 700;
+      font-size: 2.5rem;
       text-transform: uppercase;
       color: var(--text-color--light);
     }
     .subt {
       font-size: 1.3rem;
-      color: var(--ion-color-medium);
+      color: var(--text-color--light);
     }
   }
 }
@@ -33,12 +33,12 @@
   }
 }
 .container.form {
-  padding: 3rem 1.5rem;
+  padding: 3rem 1.5rem 0 1.5rem;
   display: flex;
   justify-content: center;
   .card {
-    background-color: rgba(255, 255, 255, 0.9);
     padding: 2rem 1.7rem;
+    background-color: inherit;
     @media only screen and (max-width: 479px) {
       width: 479px;
     }
