--- a/src/app/site/components/footer/footer.component.scss
+++ b/src/app/site/components/footer/footer.component.scss
@@ -1,4 +1,7 @@
 .footer {
+  .mat-toolbar {
+    background-color: rgba(252, 252, 252, 1);
+  }
   a,
   p {
     color: var(--text-color--extra-light);
