--- a/src/app/site/pages/contact/contact.page.html
+++ b/src/app/site/pages/contact/contact.page.html
@@ -3,7 +3,7 @@
     <div class="contact">
       <div class="title">Contact</div>
       <div class="subt">
-        For any kind of questions
+        Leave a comment in the form below
       </div>
     </div>
   </div>
