--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -9,10 +9,10 @@
     font-weight: 700;
     font-size: 0.9rem;
     text-transform: uppercase;
-    color: #8a99b8;
+    color: #565b70;
   }
   img {
-    filter: brightness(2.5) hue-rotate(-10deg) saturate(0.5);
+    filter: brightness(1.5) hue-rotate(0deg) saturate(0.5);
     width: 48px;
   }
 
